Add speech recognition text size const

Text isn't showing correctly at speech recognition result UI due to
a regression. The regression is addressed in
https://chromium-review.googlesource.com/c/chromium/src/+/796710
But the text will appear to small after the fix.

This CL introduce new consts which should show text correctly again.

Bug: 789654
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I7efd2c59952720677ff7d3b81bc1d3c1cb004f1d
Reviewed-on: https://chromium-review.googlesource.com/797810
Reviewed-by: Ian Vollick <vollick@chromium.org>
Commit-Queue: Biao She <bshe@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520290}
Former-commit-id: a606c93a113d476aba50fbb9d1ba80c7030354f8